--- a/Dia 1/style/styles.css
+++ b/Dia 1/style/styles.css
@@ -11,6 +11,8 @@ html, body{
     max-width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: hidden;
+    transition: all 1s ease-in;
 }
 
 .marker{
@@ -27,6 +29,22 @@ body .keys{
     
 }
 
+.change{
+    display: block;
+    border: 2px solid #ffd000c9;
+    width: auto;
+    height: 35px;
+    position: fixed;
+    right: 12%;
+    top: 5%;
+    border-radius: 0.5rem;
+    padding: 5px 10px;
+    color: #fff;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+}
+
 .key{
     width: 90px;
     min-height: 80px;
@@ -41,7 +59,7 @@ body .keys{
     font-weight: 800;
     text-shadow: 0 0 0.5rem black;
     background: rgba(0,0,0,0.4);
-    transition: 0.3s all ease-in;
+    transition: 0.2s all ease-in;
 
 }
 
@@ -70,7 +88,6 @@ body .keys{
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
-        border: 2px solid red;
         max-width: 100%;
         max-height: 90%;
     }
@@ -88,6 +105,10 @@ body .keys{
         text-shadow: 0 0 0.5rem black;
         background: rgba(0,0,0,0.4);
         transition: 0.3s all ease-in;
+    }
+
+    .change{
+        display: none;
     }
 
 }
