--- a/Dia 2/style/styles.css
+++ b/Dia 2/style/styles.css
@@ -15,4 +15,13 @@ li{
 img{
     width: 100%;
     height: 100%;
+    display: none;
+}
+
+.face-up img{
+    opacity: 1;
+}
+
+.face-down img{
+    opacity: 0;
 }
