--- a/Day 7/css/styles.css
+++ b/Day 7/css/styles.css
@@ -51,39 +51,17 @@ body .panel .row_options p{
     
 }
 
-body .control-panel{
-    width: 100%;
-    max-width: 60vh;
-    display: flex;
-    flex-direction: row;
+.panel .row_options .buttons{
+    width: 50px;
+    height: 50px;
+    border: 1px solid rgb(190, 190, 190);
+    border-radius: 50%;
     justify-content: center;
-    
-}
-
-body .control-panel .arrows p{
-    width: 100px;
-    text-align: center;
-    cursor: pointer;
-}
-
-body .control-panel .arrows h5{
-    width: 100px;
-    text-align: center;
-    padding-bottom: 15px;
-    text-transform: uppercase;
-    font-weight: 200;
-    font-size: 0.7rem;
-}
-
-body .control-panel img{
-    width: 25px;
-    height: 35px;
-    margin: -5px;
-}
-
-body .control-panel .arrows{
     display: flex;
-    flex-direction: column;
-    padding: 50px;
+}
 
+.panel .row_options .buttons:active{
+    width: 48px;
+    height: 48px;
+    background: rgb(190,190,190)
 }
