--- a/Day 14/css/styles.css
+++ b/Day 14/css/styles.css
@@ -4,3 +4,51 @@
     box-sizing: border-box;
 }
 
+#movies{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.marker{
+    border: 2px solid red;
+}
+
+.movie-single{
+
+    padding: 15px;
+    width: 60%;
+    height: 350px;
+    background: rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+    margin-left: 20px;
+    border-radius: 10px;
+
+}
+
+.img-movie{
+    float: left;
+    height: 300px;
+    padding: 10px;
+    width: 35%;
+}
+
+.well{
+
+    padding: 20px;
+    width: 65%;
+    float: right;
+    
+}
+
+/*@media(min-width:960px){
+    #movies .col-md-3 .well{
+        height: 390px;
+    }
+
+    #movies .col-md-3 img{
+        height: 240px;
+    }
+}*/
