Dia 17 , math game

--- a/Day 16/css/styles.css
+++ b/Day 16/css/styles.css
@@ -39,6 +39,12 @@ input:focus{
     -webkit-box-shadow: none !important;
 }
 
+input:active{
+    border-bottom: 1px solid #9e9e9e !important;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+}
+
 .btn-submit{
     float: right;
 }
