--- a/Day 22/css/styles.css
+++ b/Day 22/css/styles.css
@@ -5,69 +5,95 @@
 }
 
 html, body{
+
     width: 100%;
-    height: 100%;
-}
+    height: 100vh;
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 
-.container{
-    height: 100%;
 }
-
 .marker{
     border: 2px solid red;
-}
-
-.col1{
-    margin-top: 15px;
-    width: 30%;
-    height: 100%;
-    background: rgba(139, 139, 139, 0.1);
-}
-
-.col2{
-    margin-top: 10px;
-    width: 70%;
-    height: 100%;
-    margin-left: 15px;
-
 }
 
 .panel{
 
     display: flex;
-    flex-direction: row;
-
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
 }
 
-.book-card{
-
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0,0,0,0.8);
+.squad{
+    border: 1px solid rgba(0, 0, 0, 0.151);
     padding: 20px;
-    font-size: 30px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+.squad h3{
     text-align: center;
-
-
+    font-size: 3rem;
+    font-weight: 300;
 }
 
-form button{
-    float: right;
-    margin-right: 5%;
+.squad h3 span img{
+    width: 100px;
+    height: 100px;
 }
 
-.gallery{
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-}
-
-.gallery img{
+.charm{
     width: 100%;
-    height: auto;
+    height: 40px;
+    background:url('https://i.pinimg.com/originals/1d/21/7e/1d217e468b82294d37f178d7f19b4f04.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.gallery .desc{
-    padding: 15px;
-    text-align: center;
+.squad input[type='text'], input[type='number']{
+    width: 100%;
 }
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  #answer{
+
+    padding: 15px;
+
+  }
