--- a/Day 26/css/styles.css
+++ b/Day 26/css/styles.css
@@ -35,8 +35,20 @@ html, body{
     opacity: 0;
     animation: type 3s steps(24),
                blinkborder .6s step-end infinite;
-    animation-delay: 1s;
+    animation-delay: 1.5s;
     border-right: 3px solid rgba(0, 0, 0, 0.767);
+    
+
+}
+
+#effect{
+
+    font-size: 3rem;
+    color: #000;
+    text-align: center;
+    transform: translateY(600%);
+    font-family: 'Open Sans Condensed', sans-serif;
+
 
 }
 
